# swe-agent-eval

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  task.txt  test.py  trajectory_analysis.ipynb  trajectory_viewer.py
