[project]
name = "swe-agent-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.5.0",
    "seaborn>=0.11.0",
    "streamlit>=1.25.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
